making a new check-in process using diferents refactorizing methods in order to use a movement and movement_detail from use a checkin process, from this also create new DTO to put order on the process to manage in a better way the entities with many to many... now it works well but also creating a diferent way to improve the code trying to keep it simple, stupid.